public/styles.css
/* ... */
@keyframes colorful {
  0% {
    background-position: 0 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0 50%;
  }
}

li.nav-item {
  margin-bottom: 30px;
}

li.nav-home {
  margin-bottom: 30px;
}

li.nav-home:hover {
  margin-bottom: 30px;
  height: auto;
  background: #898f83;
}

li.nav-profile {
  margin-bottom: 30px;
}

li.nav-profile:hover {
  margin-bottom: 30px;
  height: auto;
  background: #898f83;
}

li.nav-entry {
  margin-bottom: 30px;
}

li.nav-entry:hover {
  margin-bottom: 30px;
  height: auto;
  background: #898f83;
}

li.nav-bprofile {
  margin-bottom: 30px;
}

li.nav-bprofile:hover {
  margin-bottom: 30px;
  height: auto;
  background: #898f83;
}

li.nav-logout {
  margin-bottom: 30px;
}

li.nav-logout:hover {
  margin-bottom: 30px;
  height: auto;
  background: #898f83;
}

/*--HOME PAGE----------------------------HOME*/
.home-container {
  display: grid;
  grid-template-columns: 3fr 2fr;
  gap: 50px;
  margin-left: 50px;
  margin-top: 40px;
}

.mini-home-container {
  /* background: blue; */
  display: grid;
  grid-template-columns: 1fr;
  gap: 30px;
  height: 80vh;
  padding-top: 40px;
}

.mini-profile-container {
  text-align: center;
  padding: 30px;
  /* background:  rgba(94, 104, 38, .7); */
  /* background: #E5E7E9;
  background: rgb(233,225,206);
  background: linear-gradient(360deg, rgba(233,225,206,1) 20%, rgba(226,220,206,1) 49%, rgb(165, 170, 159) 100%); */
  background: rgb(229,231,233);
background: linear-gradient(347deg, rgba(229,231,233,1) 0%, rgba(226,220,206,1) 58%, rgba(168,172,162,1) 97%);
  height: 400px;
}

.mini-profile-container:hover {
  /* background:rgba(0, 0, 0, 0.1); */
  background: linear-gradient(180deg, rgba(229,231,233,.8) 0%, rgba(226,220,206,.8) 58%, rgba(168,172,162,.8) 97%);
}

.mini-info-container {
  /* background: rgb(166,172,159);
  background: linear-gradient(360deg, rgba(166,172,159,1) 0%, rgba(175,179,171,  1) 29%, rgba(168,172,162,1) 100%); */
  background: #E5E7E9;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  height: 700px;
  width: 400px;
  /* padding-top: 40px; */
  margin: 40px;
  display: grid;
  grid-template-rows: repeat(5, 1fr);
  grid-template-columns: repeat(2, 1fr);
  /* grid-column-gap: 30px; */
}

.mini-info-container:hover {
  background:rgba(0, 0, 0, 0.1);
}

.toptitle {
  margin-top: 40px;
  justify-self: center;
  grid-column: 1/3;
}

.topbirdersicon {
  background: #c8994d;
  border-radius: 50%;
  height: 75px;
  width: 75px;
  justify-self: end;
  align-self: end;
  grid-column: 1/2;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
}

/* .usericon {
  margin: 30px;
} */

.descriptiontag1 {
  grid-column: 2/3;
  grid-row: 2/3;
  align-self: end;
}

.descriptiontag2 {
  grid-column: 2/3;
  grid-row: 3/4;
  align-self: end;
}

.descriptiontag3 {
  grid-column: 2/3;
  grid-row: 4/5;
  align-self: end;
}

.mini-map-container {
  /* background:  #91948d;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
  height: 390px;
  text-align: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.loading {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px;
  width: 800%;
  background: #b8a4a4;
}

.lds-roller {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-roller div {
  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  transform-origin: 40px 40px;
}
.lds-roller div:after {
  content: " ";
  display: block;
  position: absolute;
  width: 7px;
  height: 7px;
  border-radius: 50%;
  background: #fff;
  margin: -4px 0 0 -4px;
}
.lds-roller div:nth-child(1) {
  animation-delay: -0.036s;
}
.lds-roller div:nth-child(1):after {
  top: 63px;
  left: 63px;
}
.lds-roller div:nth-child(2) {
  animation-delay: -0.072s;
}
.lds-roller div:nth-child(2):after {
  top: 68px;
  left: 56px;
}
.lds-roller div:nth-child(3) {
  animation-delay: -0.108s;
}
.lds-roller div:nth-child(3):after {
  top: 71px;
  left: 48px;
}
.lds-roller div:nth-child(4) {
  animation-delay: -0.144s;
}
.lds-roller div:nth-child(4):after {
  top: 72px;
  left: 40px;
}
.lds-roller div:nth-child(5) {
  animation-delay: -0.18s;
}
.lds-roller div:nth-child(5):after {
  top: 71px;
  left: 32px;
}
.lds-roller div:nth-child(6) {
  animation-delay: -0.216s;
}
.lds-roller div:nth-child(6):after {
  top: 68px;
  left: 24px;
}
.lds-roller div:nth-child(7) {
  animation-delay: -0.252s;
}
.lds-roller div:nth-child(7):after {
  top: 63px;
  left: 17px;
}
.lds-roller div:nth-child(8) {
  animation-delay: -0.288s;
}
.lds-roller div:nth-child(8):after {
  top: 56px;
  left: 12px;
}
@keyframes lds-roller {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.birds-nearby-container {
  /* background: #f3b118; */
  /* box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
  height: 390px;
  width: 280px;
  justify-self: center;
  overflow: scroll;
}

.local-bird {
  background: #c8994d;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  /* margin-bottom: 10px; */
  font-size: 12;
}
/* .birds-nearby-container:hover {
  background:rgba(0, 0, 0, 0.1);
} */
p.toobig {
  font-size: 13;
  font-weight: bold;
  color: #566573;
}

p.smol {
  margin-bottom: 10px;
  color: #566573;
}
/* ... */

